fixed the downloads and dependencies for MAC OS

--- a/1-Simple-N-Gram-Wikipedia-autocomplete.ipynb
+++ b/1-Simple-N-Gram-Wikipedia-autocomplete.ipynb
@@ -2,23 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "import nltk\n",
     "import numpy as np\n",
     "import random\n",
+    "import lxml\n",
     "\n",
     "\n",
     "import bs4 as bs\n",
     "import urllib.request\n",
-    "import re"
+    "import re\n",
+    "import ssl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -35,11 +37,14 @@
    ],
    "source": [
     "# Scrap sentences from wikipedia on desired topic\n",
-    "raw_html = urllib.request.urlopen('https://en.wikipedia.org/wiki/Deep_learning')\n",
+    "context = ssl._create_unverified_context()\n",
+    "raw_html = urllib.request.urlopen('https://en.wikipedia.org/wiki/Deep_learning',context=context)\n",
     "raw_html = raw_html.read()\n",
     "\n",
+    "'''print(raw_html)'''\n",
+    "\n",
     "# Read complete page paragraphs\n",
-    "article_html = bs.BeautifulSoup(raw_html, 'lxml')\n",
+    "article_html = bs.BeautifulSoup(raw_html, \"html.parser\")\n",
     "article_paragraphs = article_html.find_all('p')\n",
     "article_text = ''\n",
     "\n",
@@ -53,16 +58,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "46095"
+       "44934"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -91,8 +96,8 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     C:\\Users\\nsser\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Unzipping tokenizers\\punkt.zip.\n"
+      "[nltk_data]     /Users/jonnasosauranga/nltk_data...\n",
+      "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
      ]
     },
     {
@@ -101,13 +106,21 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import nltk\n",
+    "\n",
+    "try:\n",
+    "    _create_unverified_https_context = ssl._create_unverified_context\n",
+    "except AttributeError:\n",
+    "    pass\n",
+    "else:\n",
+    "    ssl._create_default_https_context = _create_unverified_https_context\n",
+    "\n",
     "nltk.download('punkt')"
    ]
   },
@@ -7270,7 +7283,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
