created multiple models

--- a/3-python-to-vec.ipynb
+++ b/3-python-to-vec.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PYTHON2VEC\n",
+    "### Jonathan Sosa Uranga\n",
+    "### Feb 21 2023\n",
+    "### CS421"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 58,
    "metadata": {},
@@ -52,25 +63,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Downloand git repositories automatically"
+    "# Downloand git repositories automatically (Extension)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\n# Access your GitHub account with a personal access token\\ng = Github('personal_access_token')\\n\\n# Get a repository object for the repository you want to download\\nrepo = g.get_repo('username/repository')\\n\\n# Download a ZIP archive of the repository\\nzipball_url = repo.get_archive_link('zipball')\\nresponse = urllib.request.urlopen(zipball_url)\\ndata = response.read()\\n\\n# Extract the files from the ZIP archive\\nwith zipfile.ZipFile(io.BytesIO(data)) as zip_ref:\\n    zip_ref.extractall('./python-repositories')\""
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from github import Github\n",
     "import urllib.request\n",
@@ -103,25 +103,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#this piece of code filters the code files and cleans the non usefull files\n",
-    "import pathlib\n",
     "import shutil\n",
     "import os\n",
     "\n",
+    "#deletes files and subdirectories in the path\n",
     "def delete_subdirs(directory_path):\n",
     "    for filename in os.listdir(directory_path):\n",
     "        file_path = os.path.join(directory_path, filename)\n",
     "        if os.path.isdir(file_path):\n",
     "            shutil.rmtree(file_path)\n",
     "        else:\n",
-    "            os.remove(file_path)\n",
+    "            os.remove(file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#this piece of code filters the code files and cleans the non usefull files\n",
+    "import pathlib\n",
     "\n",
     "# sets the path of the directory where the python files are downloades\n",
     "path = pathlib.Path('./python-repositories')\n",
+    "\n",
     "#sets the file where we are moving the python files\n",
     "new_dir = pathlib.Path('./python-files')\n",
     "\n",
@@ -187,6 +197,14 @@
     "\n",
     "# Count the number of tokens\n",
     "num_tokens = len(tokens)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Words = 3"
    ]
   },
   {
@@ -258,21 +276,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Search sequence:  test pandas\n",
+      "Search sequence:  if\n",
       "\n",
-      "Suggestion: test pandas self parametrize self test_demo testcase len self path vertices if\n"
+      "Suggestion: if none sequence datetime k x1 transform if axis app_label len\n"
      ]
     }
    ],
    "source": [
-    "seed_sequence = \"test pandas\"\n",
+    "seed_sequence = \"if\"\n",
+    "print(f'Search sequence: ', seed_sequence)\n",
+    "print(f'\\nSuggestion: {auto_complete(seed_sequence)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Search sequence:  and\n",
+      "\n",
+      "Suggestion: and z exp path_to_file_uri call_axes_locator add_value stderr testcase if except kernel32\n"
+     ]
+    }
+   ],
+   "source": [
+    "seed_sequence = \"and\"\n",
+    "print(f'Search sequence: ', seed_sequence)\n",
+    "print(f'\\nSuggestion: {auto_complete(seed_sequence)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Search sequence:  pandas\n",
+      "\n",
+      "Suggestion: pandas get args line assert if y_prob test_lock_been_held parser allow_domains as\n"
+     ]
+    }
+   ],
+   "source": [
+    "seed_sequence = \"pandas\"\n",
+    "print(f'Search sequence: ', seed_sequence)\n",
+    "print(f'\\nSuggestion: {auto_complete(seed_sequence)}')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Words = 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ngram dictionary to keep the possible ngrams as keys and next occuring words as list items\n",
+    "ngrams = {}\n",
+    "\n",
+    "# words in a single ngram\n",
+    "words = 10\n",
+    "\n",
+    "# Iterate over words tokens\n",
+    "for i in range(len(tokens)-words):\n",
+    "    # incrementaly find ngram word sequences  \n",
+    "    seq = ' '.join(tokens[i:i+words])\n",
+    "\n",
+    "    # insert in dictionary as key\n",
+    "    if  seq not in ngrams.keys():\n",
+    "        # prepare empty list to insert next possible chars\n",
+    "        ngrams[seq] = []\n",
+    "\n",
+    "    # push a next word\n",
+    "    ngrams[seq].append(tokens[i+words])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Search sequence:  if\n",
+      "\n",
+      "Suggestion: if self set_xlabel clear_restricted_objects_from_queryset right clf sosfilt import resource stack_func_mock to_native\n"
+     ]
+    }
+   ],
+   "source": [
+    "seed_sequence = \"if\"\n",
+    "print(f'Search sequence: ', seed_sequence)\n",
+    "print(f'\\nSuggestion: {auto_complete(seed_sequence)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Search sequence:  and\n",
+      "\n",
+      "Suggestion: and test_host_header_seted_in_request_headers signals bufsize i return if zeros common_docstring low_memory s1\n"
+     ]
+    }
+   ],
+   "source": [
+    "seed_sequence = \"and\"\n",
+    "print(f'Search sequence: ', seed_sequence)\n",
+    "print(f'\\nSuggestion: {auto_complete(seed_sequence)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Search sequence:  pandas\n",
+      "\n",
+      "Suggestion: pandas set_va data_fill_value instrumenter objs sentry_task_factory i in categorical set import\n"
+     ]
+    }
+   ],
+   "source": [
+    "seed_sequence = \"pandas\"\n",
     "print(f'Search sequence: ', seed_sequence)\n",
     "print(f'\\nSuggestion: {auto_complete(seed_sequence)}')"
    ]
@@ -317,6 +474,14 @@
     "                    tokenized_lines_of_code.append(tokens)\n",
     "        except:\n",
     "            pass"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### window = 10"
    ]
   },
   {
@@ -380,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +563,7 @@
        " ('container_name', 0.9610879421234131)]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,6 +593,127 @@
       ]
      },
      "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.wv.most_similar('pandas')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### window = 30"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(595502, 894270)"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = gensim.models.Word2Vec(\n",
+    "    window=30,\n",
+    "    min_count=2\n",
+    ")\n",
+    "\n",
+    "model.build_vocab(tokenized_lines_of_code)\n",
+    "model.train(tokenized_lines_of_code, total_examples=model.corpus_count, epochs=model.epochs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('and', 0.9690305590629578),\n",
+       " ('not', 0.9688413739204407),\n",
+       " ('hasattr', 0.9445378184318542),\n",
+       " ('startswith', 0.940591037273407),\n",
+       " ('or', 0.9357790350914001),\n",
+       " ('poll', 0.9299843907356262),\n",
+       " ('line', 0.9294688701629639),\n",
+       " ('endswith', 0.9219751954078674),\n",
+       " ('pre_sys_modules', 0.9172073006629944),\n",
+       " ('l', 0.9170735478401184)]"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.wv.most_similar('if')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('startswith', 0.9916185140609741),\n",
+       " ('hasattr', 0.9896411895751953),\n",
+       " ('endswith', 0.9732431173324585),\n",
+       " ('not', 0.9690929055213928),\n",
+       " ('if', 0.969030499458313),\n",
+       " ('line', 0.9650021195411682),\n",
+       " ('elif', 0.9611486792564392),\n",
+       " ('strip', 0.9597775340080261),\n",
+       " ('rstrip', 0.9580897688865662),\n",
+       " ('or', 0.956267774105072)]"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.wv.most_similar('and')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('test_decorators', 0.9123217463493347),\n",
+       " ('dtypes', 0.9053671956062317),\n",
+       " ('td', 0.8929196000099182),\n",
+       " ('util', 0.8877997994422913),\n",
+       " ('libs', 0.8866634368896484),\n",
+       " ('categoricaldtype', 0.8804019689559937),\n",
+       " ('union_categoricals', 0.8708074688911438),\n",
+       " ('matplotlib', 0.866600751876831),\n",
+       " ('find_common_type', 0.8610244989395142),\n",
+       " ('makemessages', 0.8498115539550781)]"
+      ]
+     },
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
