counted lines of code

--- a/3-python-to-vec.ipynb
+++ b/3-python-to-vec.ipynb
@@ -444,9 +444,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "78434\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import tokenize\n",
@@ -473,7 +481,9 @@
     "                                tokens.append(token_value)\n",
     "                    tokenized_lines_of_code.append(tokens)\n",
     "        except:\n",
-    "            pass"
+    "            pass\n",
+    "\n",
+    "print(tokenized_lines_of_code)"
    ]
   },
   {
