counted number of words

--- a/3-python-to-vec.ipynb
+++ b/3-python-to-vec.ipynb
@@ -155,9 +155,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3069028\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import tokenize\n",
@@ -196,7 +204,9 @@
     "            tokens.append(token_value)\n",
     "\n",
     "# Count the number of tokens\n",
-    "num_tokens = len(tokens)"
+    "num_tokens = len(tokens)\n",
+    "\n",
+    "print(num_tokens)"
    ]
   },
   {
@@ -209,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
