--- a/3-python-to-vec.ipynb
+++ b/3-python-to-vec.ipynb
@@ -506,16 +506,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(595632, 894270)"
+       "(595357, 894270)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,6 +619,35 @@
    ],
    "source": [
     "model.wv.most_similar('pandas')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('status_code', 0.976210355758667),\n",
+       " ('tmp', 0.972752034664154),\n",
+       " ('getattr', 0.971566379070282),\n",
+       " ('param', 0.9686329364776611),\n",
+       " ('update_kwargs', 0.967738151550293),\n",
+       " ('key', 0.9663164615631104),\n",
+       " ('mock_import', 0.9655062556266785),\n",
+       " ('task_vars', 0.9640794396400452),\n",
+       " ('run', 0.9632110595703125),\n",
+       " ('app_configs', 0.9629877805709839)]"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.wv.most_similar('get')"
    ]
   },
   {
@@ -740,6 +769,35 @@
    ],
    "source": [
     "model.wv.most_similar('pandas')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('collection_list', 0.9736417531967163),\n",
+       " ('status_code', 0.9729987978935242),\n",
+       " ('key', 0.9712381362915039),\n",
+       " ('tmp', 0.9669870138168335),\n",
+       " ('var', 0.9664952158927917),\n",
+       " ('rsp', 0.9662845730781555),\n",
+       " ('req', 0.9656475186347961),\n",
+       " ('options', 0.9639554023742676),\n",
+       " ('as_text', 0.9637307524681091),\n",
+       " ('reloaded', 0.9625641703605652)]"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.wv.most_similar('get')"
    ]
   }
  ],
